[project]
name = "cython-image-processing"
version = "0.0.1"
description = "A Cython package for high-performance image processing with numpy arrays"
readme = "README.md"
requires-python = ">=3.8"
#dynamic = ["version"]
keywords = ["cython", "image processing", "numpy", "performance"]
authors = [
    {name = "Chip Lukes", email = "34627158+chiplukes@users.noreply.github.com" },
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = [
    "numpy>=1.20.0",
    "cython>=0.29.0",
]

[build-system]
requires = ["setuptools", "cython", "numpy"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/chiplukes/cython-image-processing"
Changelog = "https://github.com/chiplukes/cython-image-processing/releases"
Issues = "https://github.com/chiplukes/cython-image-processing/issues"
CI = "https://github.com/chiplukes/cython-image-processing/actions"

[project.optional-dependencies]
test = ["pytest","pytest-cov"]
dev = ["pre-commit","vulture"]


[tool.ruff]
line-length=120

[tool.ruff.lint]
select = [
  "A",   # flake8-builtins
  "B",   # flake8-bugbear
  "S",   # flake8-bandit
  "E",   # Pyflakes
  "F",   # Pycodestyle
  "I",   # Isort
  "PL",  # Pylint
  "RUF", # Ruff-specific rules
]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["S101"]
#[tool.mypy]
#strict = "True"
#implicit_reexport = "True"
#check_untyped_defs = true
#ignore_missing_imports = true
## Exclude type checking on files/dirs
#exclude = [
#  # TOML basic string (double-quotes, backslash and other characters need escaping)
#  # TOML literal string (single-quotes, no escaping necessary)
#]
